<resources>
    <string name="app_name">Story Circle</string>
    <string name="onboarding_message">Join our community and start sharing your stories today!</string>
    <string name="btn_get_started">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_description">Welcome back, you\'ve been missed!</string>
    <string name="login_title">Login</string>
    <string name="donthaveacc_description">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="register_description">Ready to dive in story circle?</string>
    <string name="alreadyhaveacc_description">Already have an account?</string>
    <string name="name">Name</string>
    <string name="required">* Required</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="capture_image">capture image</string>
    <string name="new_post">New Post</string>
    <string name="enter_your_post_description">Enter your post Description</string>
    <string name="detail_name">Name :</string>
    <string name="detail_description">Description :</string>
    <string name="retry">Coba lagi</string>
</resources>